--- a/frontend/assets/css/admin.css
+++ b/frontend/assets/css/admin.css
@@ -2568,9 +2568,19 @@ body {
 }
 
 @keyframes ring {
-  0% { transform: rotate(0); }
-  25% { transform: rotate(15deg); }
-  50% { transform: rotate(0); }
-  75% { transform: rotate(-15deg); }
-  100% { transform: rotate(0); }
+  0% {
+    transform: rotate(0);
+  }
+  25% {
+    transform: rotate(15deg);
+  }
+  50% {
+    transform: rotate(0);
+  }
+  75% {
+    transform: rotate(-15deg);
+  }
+  100% {
+    transform: rotate(0);
+  }
 }
